[package]
name = "sql-dialect-fmt-text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared source text position helpers for sql-dialect-fmt."

license = "0BSD"
[dependencies]
