[package]
name = "sql-dialect-fmt-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Raw WebAssembly bindings for sql-dialect-fmt, intended for browser extensions."
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sql-dialect-fmt-formatter = { path = "../sql-dialect-fmt-formatter", version = "1.0.0" }
